# ruvola

./: Cargo.toml  README.md
.github/workflows/: rust.yml
config_preset/: config.toml
src/: config.rs  main.rs  model.rs
src/model/: voca_card.rs  voca_session.rs
