[package]
name = "vocab_trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
cli-log = "2.1.0"
color-eyre = "0.6.3"
confy = "0.6.1"
crossterm = "0.29.0"
edit-distance = "2.1.3"
rand = "0.9.1"
ratatui = "0.29.0"
serde = { version = "1.0.219" , features = ["derive"] }
toml = "0.8.20"
