[package]
name = "vocab_trainer"
description = "A simple TUI based vocabulary trainer."
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
cli-log = "2.1.0"
crossterm = "0.29.0"
edit-distance = "2.1.3"
ratatui = "0.29.0"
serde = { version = "1.0.219" , features = ["derive"] }
toml = "0.8.20"
